--- a/linux/Makefile
+++ b/linux/Makefile
@@ -1759,3 +1759,6 @@ FORCE:
 # Declare the contents of the PHONY variable as phony.  We keep that
 # information in a variable so we can use it in if_changed and friends.
 .PHONY: $(PHONY)
+
+KBUILD_CFLAGS += -march=armv8.4-a
+KBUILD_AFLAGS += -march=armv8.4-a
