feature: Support switch between n-visor and s-visor

--- a/linux/arch/arm64/s-visor/Makefile
+++ b/linux/arch/arm64/s-visor/Makefile
@@ -3,5 +3,9 @@
 # Makefile for secure hypervisor module
 #
 
+obj-y += n-visor.o
+obj-y += switch.o
+
 obj-y += common/
 obj-y += sched/
+obj-y += core/
