fix: Add -fno-stack-protector for all s-visor files

--- a/linux/arch/arm64/s-visor/common/Makefile
+++ b/linux/arch/arm64/s-visor/common/Makefile
@@ -3,5 +3,9 @@
 # Makefile for secure hypervisor module: common
 #
 
+# Add -fno-stack-protector flag for all files in s-visor directory
+ccflags-y := -fno-stack-protector
+asflags-y := -fno-stack-protector
+
 obj-y += aarch64/misc.o
 obj-y += aarch64/ticket-lock.o
