--- a/linux/arch/arm64/s-visor/el3_runtime/Makefile
+++ b/linux/arch/arm64/s-visor/el3_runtime/Makefile
@@ -4,5 +4,9 @@
 # Port from trusted-firmware-a
 #
 
+# Add -fno-stack-protector flag for all files in s-visor directory
+ccflags-y := -fno-stack-protector
+asflags-y := -fno-stack-protector
+
 obj-y += context.o
 
