--- a/linux/arch/arm64/s-visor/mm/Makefile
+++ b/linux/arch/arm64/s-visor/mm/Makefile
@@ -3,6 +3,10 @@
 # Makefile for secure hypervisor module: mm
 #
 
+# Add -fno-stack-protector flag for all files in s-visor directory
+ccflags-y := -fno-stack-protector
+asflags-y := -fno-stack-protector
+
 obj-y += tlsf.o \
 	 	 page_allocator.o \
 		 buddy_allocator.o \
