--- a/linux/arch/arm64/s-visor/el3/Makefile
+++ b/linux/arch/arm64/s-visor/el3/Makefile
@@ -10,3 +10,9 @@ asflags-y := -fno-stack-protector
 
 obj-y += context.o
 obj-y += context_mgmt.o
+obj-y += runtime_exception.o
+obj-y += runtime_svc.o
+obj-y += titanium_main.o
+obj-y += platform.o
+obj-y += cpu_data_array.o
+obj-y += smc.o
