port: Add sel1_spt_info.c/h

--- a/linux/arch/arm64/s-visor/mm/Makefile
+++ b/linux/arch/arm64/s-visor/mm/Makefile
@@ -10,4 +10,5 @@ asflags-y := -fno-stack-protector
 obj-y += tlsf.o \
 	 	 page_allocator.o \
 		 buddy_allocator.o \
-		 mm.o
+		 mm.o \
+		 spt_info.o
