port: Add sel1_mmu related files

--- a/linux/arch/arm64/s-visor/mm/Makefile
+++ b/linux/arch/arm64/s-visor/mm/Makefile
@@ -11,4 +11,6 @@ obj-y += tlsf.o \
 	 	 page_allocator.o \
 		 buddy_allocator.o \
 		 mm.o \
-		 spt_info.o
+		 spt_info.o \
+		 sec_mmu.o \
+		 stage2_mmu.o
