feature: Add CONFIG_S_VISOR_DEBUG macro to control whether compile with -O0

--- a/linux/arch/arm64/s-visor/Kconfig
+++ b/linux/arch/arm64/s-visor/Kconfig
@@ -4,4 +4,8 @@ menu "Secure Hypervisor"
 config S_VISOR
     bool "Enable s-visor in normal world"
 
+config S_VISOR_DEBUG
+    bool "Enable -O0 compilation in s-visor"
+    depends on S_VISOR
+
 endmenu
